Update Konvekse_maengder.tex, simplex_metoden.tex, and 3 more files...

--- a/incl/main/grafisk_losning/Konvekse_maengder.tex
+++ b/incl/main/grafisk_losning/Konvekse_maengder.tex
@@ -1,4 +1,5 @@
 \section{Konvekse mængder}
+\label{julieerlakker}
 %
 I forbindelse med mængder af vektorer er det vigtigt at definere \textit{konvekse mængder}.
 %
