--- a/incl/main/simplex_metoden/simplex_metoden_typer.tex
+++ b/incl/main/simplex_metoden/simplex_metoden_typer.tex
@@ -1,5 +1,5 @@
 %
-\section{Typer af simplex-metoden}
-%
+\section{Implementering}
+Der er tre forskellige implementeringer af simplex metoden, den naive, den reviderede, og den fulde matrix implementering. 
 
-%
+% Mathias dette var allerede skrevet fra Jonas af fra et par gange siden. Denne kan du passende kige videre på xD
