--- a/incl/main/simplex_metoden/undgå_pivoteringslokke.tex
+++ b/incl/main/simplex_metoden/undgå_pivoteringslokke.tex
@@ -1,18 +1,22 @@
 %
 \section{Konstruktion af simplex metoden}
+% --------------------------------------------------------------
 %
-For at finde den mest optimale løsning, kan man udvælge en basal løsning og undersøge hvorvidt der findes andre løsninger, der er bedre end den valgte. 
+For at finde den mest optimale løsning, kan man udvælge en basal løsning og undersøge, hvorvidt der findes andre løsninger, der er bedre end den valgte. 
 Hvis der ikke findes bedre løsninger, er den valgte basale løsning den optimale løsning. 
-Eftersom der optimeres for en konveks funktion over en konveks mængde, se afsnit \ref{julieerlakker},  %Det er det med at et lokal minimum er et globalt minimum xD
+Eftersom der optimeres for en konveks funktion over en konveks mængde, se afsnit \ref{julieerlakker}, %Det er det med at et lokal minimum er et globalt minimum xD
 vil den lokale optimale løsning, være global optimal løsning. 
 %
 %Når der undersøges om der findes et nabo punkt, hvis løsning er bedre, så er det ikke nødvendigt at undersøge i retningen, som leder ud af den basal mulige område.
 %
 \begin{defn}{}{}
 Lad $\textbf{x}$ være et element af en polyeder $\mathcal{P}$.
-En vektor $\textbf{d}\in \R^n$ siges at være en  \textit{mulig retning} fra $\textbf{x}$, hvis der eksister en positiv skalar $\theta$, sådan at $x+\theta \textbf{d}\in \mathcal{P}$.
+En vektor $\textbf{d}\in \R^n$ siges at være en  \textbf{mulig retning} fra $\textbf{x}$, hvis der eksister en positiv skalar $\theta$, sådan at $x+\theta \textbf{d}\in \mathcal{P}$.
 \end{defn}
+\noindent
 %
-fisk 
-
+På figur \ref{fig:julieersmuuuuuk}, ses vektorerne $\mathbf{x}_1, \mathbf{x}_2$ og $\mathbf{x}_3$ i polyeder $\mathcal{P}$, samt tilhørende forskellige mulige retninger, som stadig er indholdt i $\mathcal{P}$.
+%
+\input{fig/tikz/simplex/mulig_retning}
+%
 %
