--- a/incl/main/simplex_metoden/undgå_pivoteringslokke.tex
+++ b/incl/main/simplex_metoden/undgå_pivoteringslokke.tex
@@ -21,6 +21,7 @@ På figur \ref{fig:julieersmuuuuuk}, ses vektorerne $\mathbf{x}_1, \mathbf{x}_2$
 %
 %
 %
+% Ikke skrevet rigtig endnu 
 \begin{defn}{}{}
 Lad $\mathbf{x}$ være en basal løsning, til en basis matrix $B$ og objektfunktionen $c_B=[ c_{B(1)},c_{B(2)}, \cdots , c_{B(m)} ]^T.$
 For hver $j$'te basale retning, defineres den \textbf{reducerede objektfunktion} $c_j^*$, som
@@ -34,6 +35,7 @@ c_j^* = c_j - \mathbf{c}_B^T B^{-1}A_j.
 Fisk
 %
 % Sætning 3.1 i Bertsimas 
+% Ikke skrevet rigtig endnu 
 \begin{thm}{}{}
 Lad $\mathbf{x}$ være en basal mulig løsning, til en basis matrix $B$ og lad $\mathbf{c}^*$ være den reducerede objektfunktion. 
 \begin{enumerate}[label = (\alph*)]
@@ -51,6 +53,7 @@ fisk
 %
 %
 % Definition 3.3 i Bertsimas
+% Ikke skrevet rigtig endnu 
 \begin{defn}{}{}
 En basis matrix $B$ er optimal, hvis
 \begin{enumerate}[label = (\alph*)]
@@ -64,6 +67,7 @@ En basis matrix $B$ er optimal, hvis
 % 
 Afsnit 3.2 i bertsimas
 % Sætning 3.2 
+% Ikke skrevet rigtig endnu 
 \begin{thm}{}{}
 \begin{enumerate}[label = (\alph*)]
 \item Søjlerne $A_{B(i)}$, $i \neq \mathcal{L}$ og $A_j$ er lineær uafhængige, og 
