Update statussem_praes.pdf and statussem_praes.tex

--- a/Mega nice ting hehe/statussem_praes.tex
+++ b/Mega nice ting hehe/statussem_praes.tex
@@ -62,8 +62,11 @@ Hvordan kan lineære programmeringsproblemer anskues geometrisk, og hvordan kan 
 \item Gennemgang af algoritmen.
 \item Pivoterings-løkker og lexicografi.
 \item Kompleksitet.
-\item Overvejelser vedrørende bevis for at simplex finder optimal løsning, muligvist for komplekst, specielt under de givne arbejdsbetingelser.
-\item Muligvis en pythonimplementation.
+\item Overvejelser
+\begin{itemize}
+\item Bevis for at simplex finder optimal løsning.
+\item Python-implementering.
+\end{itemize}
 \end{itemize}
 \end{frame}
 
