--- a/Mega nice ting hehe/statussem_praes.tex
+++ b/Mega nice ting hehe/statussem_praes.tex
@@ -47,7 +47,7 @@ Hvordan kan lineære programmeringsproblemer anskues geometrisk, og hvordan kan 
 \frametitle{Grafisk løsning}
 \begin{itemize}
 \item Konvekse mængder.
-\item Ektremer, hjørnepunkter og basale løsninger.
+\item Ekstremer, hjørnepunkter og basale løsninger.
 \item Polyeder på standardform.
 \item Degenerering.
 \item Eksistens af ekstremumspunkter. %her skal det nok påpeges at det her det for alvor går nuts :P
