--- a/incl/main/grafisk_losning/poly_std_form.tex
+++ b/incl/main/grafisk_losning/poly_std_form.tex
@@ -63,7 +63,7 @@ Som følge af sætning \ref{thm:polystd} kan basale løsninger konstrueres ved h
 \item Lad $x_i=0$ for $i \neq B(1),\ldots,B(m).$
 \item Løs ligningssystemet med de $m$ ligninger, $A\textbf{x}=\textbf{b}$ for $x_{B(1)}, \ldots , x_{B(m)}.$
 \end{enumerate}
-Hvis løsningen, der er konstrueret af denne procedure, er ikke-negativ, så er løsningen en basal mulig løsning.
+Hvis løsningen, der er konstrueret af denne procedure, er ikke-negativ, så er løsningen en basal mulig løsning. Søjlerne $\textbf{A}_{B(1)},\ldots,\textbf{A}_{B(m)}$ kaldes for basis variablerne. Hvert valg af de lineært uafhængige søjler svarer til forskellige baser for rummet.
 \\\\
 \noindent
 Det bevises nu, at antagelsen om at rækkerne var lineært uafhængige, kunne fortages.
