--- a/incl/main/simplex_metoden/undgå_pivoteringslokke.tex
+++ b/incl/main/simplex_metoden/undgå_pivoteringslokke.tex
@@ -1,21 +1,21 @@
 %
-\section{Konstruktion af simplex metoden}
+\section{Konstruktion af simplex-metoden}
 % --------------------------------------------------------------
 %
-For at finde den mest optimale løsning, kan man udvælge en basal løsning og undersøge, hvorvidt der findes andre løsninger, der er bedre end den valgte. 
+For at finde den mest optimale løsning kan der udvælges en basal løsning og undersøges, hvorvidt der findes andre løsninger, som er bedre, end den valgte. 
 Hvis der ikke findes bedre løsninger, er den valgte basale løsning den optimale løsning. 
-Eftersom der optimeres for en konveks funktion over en konveks mængde, se afsnit \ref{julieerlakker}, %Det er det med at et lokal minimum er et globalt minimum xD
-vil den lokale optimale løsning, være global optimal løsning. 
+Eftersom der jævnfør afsnit \ref{julieerlakker} optimeres for en konveks funktion over en konveks mængde, %Det er det med at et lokal minimum er et globalt minimum xD
+vil den lokale optimale løsning være en global optimal løsning. 
 %
 %Når der undersøges om der findes et nabo punkt, hvis løsning er bedre, så er det ikke nødvendigt at undersøge i retningen, som leder ud af den basal mulige område.
 %
 \begin{defn}{}{}
-Lad $\textbf{x}$ være et element af en polyeder $\mathcal{P}$.
-En vektor $\textbf{d}\in \R^n$ siges at være en  \textbf{mulig retning} fra $\textbf{x}$, hvis der eksister en positiv skalar $\theta$, sådan at $x+\theta \textbf{d}\in \mathcal{P}$.
+Lad $\textbf{x}$ være et element af et polyeder $\mathcal{P}$.
+En vektor $\textbf{d}\in \R^n$ siges at være en  \textbf{mulig retning} fra $\textbf{x}$, hvis der eksisterer en positiv skalar $\theta$, således at $\textbf{x}+\theta \textbf{d}\in \mathcal{P}$.
 \end{defn}
 \noindent
 %
-På figur \ref{fig:julieersmuuuuuk}, ses vektorerne $\mathbf{x}_1, \mathbf{x}_2$ og $\mathbf{x}_3$ i polyeder $\mathcal{P}$, samt tilhørende forskellige mulige retninger, som stadig er indholdt i $\mathcal{P}$.
+På figur \ref{fig:julieersmuuuuuk}, ses vektorerne $\mathbf{x}_1, \mathbf{x}_2$ og $\mathbf{x}_3$ i polyederet $\mathcal{P}$, samt tilhørende forskellige mulige retninger, som stadig er indholdt i $\mathcal{P}$.
 %
 \input{fig/tikz/simplex/mulig_retning}
 %
@@ -23,8 +23,8 @@ På figur \ref{fig:julieersmuuuuuk}, ses vektorerne $\mathbf{x}_1, \mathbf{x}_2$
 %
 % Ikke skrevet rigtig endnu 
 \begin{defn}{}{}
-Lad $\mathbf{x}$ være en basal løsning, til en basis matrix $B$ og objektfunktionen $c_B=[ c_{B(1)},c_{B(2)}, \cdots , c_{B(m)} ]^T.$
-For hver $j$'te basale retning, defineres den \textbf{reducerede objektfunktion} $c_j^*$, som
+Lad $\mathbf{x}$ være en basal løsning til en basis matrix $B$ og objektfunktionen $c_B=[ c_{B(1)},c_{B(2)}, \cdots , c_{B(m)} ]^T.$
+For hver $j$'te basale retning defineres den \textbf{reducerede objektfunktion} $c_j^*$ som
 \begin{align*}
 c_j^* = c_j - \mathbf{c}_B^T B^{-1}A_j.
 \end{align*} 
