--- a/incl/main/grafisk_losning/poly_std_form.tex
+++ b/incl/main/grafisk_losning/poly_std_form.tex
@@ -8,28 +8,28 @@ $\mathcal{P}$ er her et \textit{polyeder på standardform}.
 I de fleste tilfælde er det en fordel at antage, at de $m$ rækker i $A$ er lineært uafhængige.
 I sætning \ref{thm:julieerfantalastisk} vises endvidere, at antagelsen om, at rækkerne er uafhængige, kan foretages, da de svarer til overflødige betingelser, som kan udelades.
 Som det ses i definition \ref{defn:basal}, skal der være $n$ aktive begrænsninger i spil for at finde en basal mulig løsning.
-Såfremt $m \neq n$, skal der derfor vælges $n-m$ variable $x_i$ med henblik på, at sætte disse $x_i=0$, hvilket gør begrænsningerne $x_i \geq 0$ aktive.
+Såfremt $m \neq n$, skal der derfor vælges $n-m$ variable $\textbf{x}_i$ med henblik på, at sætte disse $\textbf{x}_i=0$, hvilket gør begrænsningerne $\textbf{x}_i \geq 0$ aktive.
 %ovenstående 53 i bogen har behov for andre læser så vi kan diskutere hvad det betyder.
 Det er dog ikke uvæsentligt, hvilke af disse variable der omdannes til $0$ hvilket belyses af sætning \ref{thm:polystd}.
 %
 \begin{thm}{}{polystd}
-Ved begrænsningerne $A\mathbf{x}=\mathbf{b}$ og $\mathbf{x}\geq 0$.
+Ved begrænsningerne $A\textbf{x}=\mathbf{b}$ og $\textbf{x}\geq 0$.
 Antag, at $A$ er en $m \times n$ matrix og har lineært uafhængige rækker.
-Vektoren $\mathbf{x} \in \R^n$ er en basal løsning, hvis og kun hvis $A\mathbf{x}=\mathbf{b}$, og der eksisterer indekser $B(1),\ldots,B(m)$, hvorom der gælder følgende:
+Vektoren $\textbf{x} \in \R^n$ er en basal løsning, hvis og kun hvis $A\textbf{x}=\mathbf{b}$, og der eksisterer indekser $B(1),\ldots,B(m)$, hvorom der gælder følgende:
 \begin{enumerate}[label=(\alph*)]
 \item Søjlerne $\mathbf{A}_{B(1)},\ldots,\mathbf{A}_{B(m)}$ er lineært uafhængige.
-\item Hvis $i \neq B(1),\ldots, B(m)$, så er $x_i=0$.
+\item Hvis $i \neq B(1),\ldots, B(m)$, så er $\textbf{x}_i=0$.
 \end{enumerate}
 \end{thm}
 \begin{proof}
 Betragt et $x \in \R^n$ og antag, at der eksisterer indekser $\mathbf{A}_{B(1)},\ldots,\mathbf{A}_{B(m)}$, der opfylder (a) og (b).
 %
-Det gælder således, at de aktive begrænsninger, at $x_i=0$, når $i\neq B(1),\ldots,B(m)$, samt at $A\mathbf{x}=\mathbf{b}$.
+Det gælder således, at de aktive begrænsninger, at $\textbf{x}_i=0$, når $i\neq B(1),\ldots,B(m)$, samt at $A\textbf{x}=\mathbf{b}$.
 Dette implicerer, da det forrige gælder,  at 
 %
-$$\sum_{i=1}^{m}\textbf{A}_{B(i)}x_{B(i)}=\sum_{i=1}^{n}\textbf{A}_ix_i=A\textbf{x}=\textbf{b}.$$
+$$\sum_{i=1}^{m}\textbf{A}_{B(i)}\textbf{x}_{B(i)}=\sum_{i=1}^{n}\textbf{A}_ix_i=A\textbf{x}=\textbf{b}.$$
 %
-Da søjlerne $\textbf{A}_{B(i)}$ for $i=1,\ldots,m$ er lineært uafhængige, kan $x_{B(1)},\ldots,x_{B(m)}$ bestemmes entydigt. 
+Da søjlerne $\textbf{A}_{B(i)}$ for $i=1,\ldots,m$ er lineært uafhængige, kan $\textbf{x}_{B(1)},\ldots,\textbf{x}_{B(m)}$ bestemmes entydigt. 
 Altså har ligningssystemet skabt af de aktive begrænsninger en entydig løsning.
 %x_{B(i)} fra "da søjlerne ..." 
 Jævnfør sætning \ref{thm:betingi},
@@ -40,9 +40,9 @@ følger det, at der er $n$ aktive begrænsninger, hvoraf $\mathbf{x}$ er en basa
 %
 Antag nu, at $\mathbf{x}$ er en basal løsning. 
 Det skal nu vises, at (a) og (b) da er opfyldt.
-Lad $x_{B_1},\ldots,x_{B_k}$ være ikke-nul komponenter i $\textbf{x}$.
-Eftersom $\mathbf{x}$ er en basal løsning, følger nu, at ligningssysemet givet ved de aktive begrænsninger $x_i=0$, når $i\neq B(1),\ldots,B(k)$, samt  $\sum_{i=1}^{n}\mathbf{A}_ix_i=\mathbf{b}$, har en entydig løsning. 
-Det samme må derfor gøre sig gældende for $\sum_{i=1}^{k}\mathbf{A}_{B(i)}x_{B(i)}=\mathbf{b}$.
+Lad $\textbf{x}_{B_1},\ldots,\textbf{x}_{B_k}$ være ikke-nul komponenter i $\textbf{x}$.
+Eftersom $\mathbf{x}$ er en basal løsning, følger nu, at ligningssysemet givet ved de aktive begrænsninger $\textbf{x}_i=0$, når $i\neq B(1),\ldots,B(k)$, samt  $\sum_{i=1}^{n}\mathbf{A}_i\textbf{x}_i=\mathbf{b}$, har en entydig løsning. 
+Det samme må derfor gøre sig gældende for $\sum_{i=1}^{k}\mathbf{A}_{B(i)}\textbf{x}_{B(i)}=\mathbf{b}$.
 Det følger derfor, at søjlerne i $A_{B(1)},\ldots,A_{B(k)}$ er lineært uafhængige.
 %
 Hvis dette ikke var tilfældet, ville der findes løsninger til $\sum_{i=1}^{k}\mathbf{A}_{B(i)} \lambda_i=\mathbf{0}$ udover den trivielle, hvor $\lambda_i=0$ for $i=1,2,\ldots,k$, hvilket ville betyder, at løsningen $\mathbf{x}$ ikke er entydig. 
@@ -60,17 +60,17 @@ Da $k \leq m$ gælder det, hvis $i \neq B(1),\ldots,B(m)$, at $i \neq B(1),\ldot
 Som følge af sætning \ref{thm:polystd} kan basale løsninger konstrueres ved hjælp af følgende procedure.
 \begin{enumerate}
 \item Vælg $m$ lineært uafhængige søjler $\textbf{A}_{B(1)},\ldots,\textbf{A}_{B(m)}.$
-\item Lad $x_i=0$ for $i \neq B(1),\ldots,B(m).$
-\item Løs ligningssystemet med de $m$ ligninger, $A\textbf{x}=\textbf{b}$ for $x_{B(1)}, \ldots , x_{B(m)}.$
+\item Lad $\textbf{x}_i=0$ for $i \neq B(1),\ldots,B(m).$
+\item Løs ligningssystemet med de $m$ ligninger, $A\textbf{x}=\textbf{b}$ for $\textbf{x}_{B(1)}, \ldots , \textbf{x}_{B(m)}.$
 \end{enumerate}
 Hvis løsningen, der er konstrueret af denne procedure, er ikke-negativ, så er løsningen en basal mulig løsning. Søjlerne $\textbf{A}_{B(1)},\ldots,\textbf{A}_{B(m)}$ kaldes for basis variablerne. Hvert valg af de lineært uafhængige søjler svarer til forskellige baser for rummet.
 \\\\
 \noindent
 Det bevises nu, at antagelsen om at rækkerne var lineært uafhængige, kunne fortages.
 \begin{thm}{}{julieerfantalastisk}
-Lad $P=\{\textbf{x} \mid  A\textbf{x}=\textbf{b},x\geq 0\}$ være et ikke-tom polyeder, hvor $A$ er en $m \times n$ matrix med rækker $\textbf{a}^{T}_{1},\ldots,\textbf{a}^{T}_{m}$.
+Lad $P=\{\textbf{x} \mid  A\textbf{x}=\textbf{b},x \geq 0\}$ være et ikke-tom polyeder, hvor $A$ er en $m \times n$ matrix med rækker $\textbf{a}^{T}_{1},\ldots,\textbf{a}^{T}_{m}$.
 Antag, at rang$(A)=k<m$ og at rækkerne $\textbf{a}^T_{i_1},\ldots,\textbf{a}^T_{i_k}$ er lineært uafhængige. Givet polyederet 
-$$Q=\{\textbf{x} \mid \textbf{a}^T_{i1}\textbf{x}=b_{i1},\ldots,\textbf{a}^T_{ik}\textbf{x}=b_{ik}, \textbf{x} \geq 0  \}$$ 
+$$Q=\{\textbf{x} \mid \textbf{a}^T_{i_1}\textbf{x}=b_{i_1},\ldots,\textbf{a}^T_{i_k}\textbf{x}=b_{i_k}, \textbf{x} \geq 0  \}$$ 
 så er $Q=P$.
 \end{thm}
 \begin{proof}
