Update konklusion.tex, perspektivering.tex, and master.tex

--- a/master.tex
+++ b/master.tex
@@ -69,7 +69,11 @@
 	\include{incl/main/simplex_metoden/simplex_metoden}	
 
 % LU - DEKOMPOSITION 
-	\include{incl/main/lu_dekomposition/lu_dekomposition}
+	%\include{incl/main/lu_dekomposition/lu_dekomposition}
+	
+% Konklusion og perspektivering 
+	\include{incl/main/konklu_perspek/konklusion}	
+	\include{incl/main/konklu_perspek/perspektivering}
 
 % Appendicer indsættes inde i en appendices-blok og bliver nummereret med
 % bogstaver i stedet for tal
