--- a/incl/main/konklu_perspek/perspektivering.tex
+++ b/incl/main/konklu_perspek/perspektivering.tex
@@ -1,3 +1,3 @@
-\subsection{Perspektivering}
+\section{Perspektivering}
 %Til ikke-lineære programmeringsproblemer? Men hvorfor? 
 %Til anvendelse? Men hvorfor? Horia er da ligeglad, lyder det til...
