Update simplex_metoden_intro.tex and undgå_pivoteringslokke.tex

--- a/incl/main/simplex_metoden/undgå_pivoteringslokke.tex
+++ b/incl/main/simplex_metoden/undgå_pivoteringslokke.tex
@@ -81,3 +81,18 @@ fisk
 \\
 %
 fisk
+% Sætning 3.3
+% Ikke skrevet rigtig endnu 
+\begin{thm}{}{}
+\begin{enumerate}[label = (\alph*)]
+\item fisk
+\item fisk
+\end{enumerate}
+\end{thm}
+%
+\begin{proof}
+fisk
+\end{proof}
+\\
+%
+fisk
