--- a/incl/main/simplex_metoden/simplex_metoden_intro.tex
+++ b/incl/main/simplex_metoden/simplex_metoden_intro.tex
@@ -28,26 +28,15 @@ I følgende afsnit uddybes ovenstående punkter, samt tilhørende teori, med udg
 %
 \begin{eks}
 \label{haribooooo}
-<<<<<<< HEAD
-Haribo ønsker at finde det mest optimale forhold mellem de to vingummismage i $"$Vingummi - Hindbær og Brombær$"$-blandingen, der ses på figur \ref{mums}, med udgangspunkt i en række betingelser: 
-De ønsker at maksimere mængden af slik, begrænset af kulhydrat- og sukkerindholdet.
-=======
-%Rasmus' bud: Haribo har to typer slikblandinger $x_1$ og $x_2$, hvor profitten for disse er henholdvis $3$ og $4$ enheder(her kunne der også skrives tusind/millioner whatever ingen anelse om realistisk skala i haribos profitmargin)
-%Disse er begrænset kapiciteten af lakridsproduktion som har en begrænsning på $78$ enheder (igen ton whatever??) og vingummi som har en begrænsning på $36$ enheder, da disse indgår i begge slikblandinger.
+Haribo har to typer slikblandinger $x_1$ og $x_2$, hvor profitten for disse er henholdvis $3$ og $4$ enheder(her kunne der også skrives tusind/millioner whatever ingen anelse om realistisk skala i haribos profitmargin)
+Disse er begrænset kapiciteten af lakridsproduktion som har en begrænsning på $78$ enheder (igen ton whatever??) og vingummi som har en begrænsning på $36$ enheder, da disse indgår i begge slikblandinger.
 %igen jeg er ikke sikker på om det også fungerer aok med din udgave Julie, den har jeg bare sværere ved at forstå.
-
-
+%
 Haribo ønsker at finde det mest optimale forhold mellem de to vingummismage i $"$Vingummi hindbær og brumbær$"$-blandingen, der ses på figur \ref{mums}, med udgangspunkt i en række betingelser. 
 De ønsker at maksimere mængden af slik, begrænset af kulhydrat- og sukker-indholdet.
->>>>>>> 685cef0e11efdbf6f6cd0d84e8ffa922fc663b49
-\\
 %
-\begin{minipage}[b]{0.55\textwidth}
-%
-Der er $3 g$ kulhydrat i hindbærvarianten og $5 g$ i brombærvarianten, mens sukkerindholdet henholdsvis er $4 g$ og $1 g$. 
-Dertil er der henholdsvis $5$ og $4$ stk. i poserne. 
 Optimeringsproblemet er dermed følgende:
-%Jeg er ikke heeeeelt med på ovenstående kriterier - Jens
+%
 \begin{align*}
 \begin{array}{lrrlr} 
 \text{Maksimer}		&	\multicolumn{2}{c}{z=5x_1+4x_2}  &\\
@@ -56,17 +45,6 @@ Optimeringsproblemet er dermed følgende:
 					&x_1& , x_2				&\geq	& 0.
 \end{array}
 \end{align*}
-%
-\end{minipage}
-%
-\begin{minipage}[b]{0.4\textwidth}
-%
-\center
-\includegraphics[scale=0.7]{fig/img/hindbaerbrombaer}
-%
-\captionof{figure}{$"$Vingummi hindbær og brumbær$"$-blanding fra Haribo.}
-\label{mums}
-\end{minipage}
 %
 \end{eks}
 
